--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.12.1"
+    "react-router-dom": "^6.12.1",
+    "styled-components": "^6.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
